--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
     "@babel/core": "^7.17.9",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.1",
+    "mongoose": "^6.3.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15"
   }
 }
